Added gpu marker, wip frsutrum culling, debug shapes, wip CSM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.20)
-
+cmake_minimum_required (VERSION 3.11)
 set(DILIGENT_NO_OPENGL 1)
 set(DILIGENT_NO_DIRECT3D11 1)
+set(DILIGENT_LOAD_PIX_EVENT_RUNTIME 1)
 
 set(CMAKE_BUILD_PARALLEL_LEVEL 1)
 set(CMAKE_CXX_STANDARD 17)
@@ -9,7 +9,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
 project(GraphicsPlayground)
 
-add_definitions(-D PLATFORM_WIN32)
+add_definitions(-D PLATFORM_WIN32 -D DILIGENT_LOAD_PIX_EVENT_RUNTIME)
+add_compile_definitions(USE_PIX=1)
 
 include_directories(external/include)
 include_directories(external/DiligentCore)
@@ -23,13 +24,15 @@ add_subdirectory(external/mimalloc)
 include_directories(external/mimalloc/include)
 
 include_directories(external/taskflow/)
+include_directories(external/WinPix/)
 
 file(GLOB_RECURSE ENGINE_SOURCES src/*.cpp src/*.c)
-file(GLOB_RECURSE ENGINE_HEADERS external/*.h external/*.hpp external/*.inl src/*.hpp)
+file(GLOB_RECURSE ENGINE_HEADERS external/*.h external/*.hpp external/*.inl /src/*.hpp)
 
 link_directories(${CMAKE_SOURCE_DIR}/external/lib)
 
 set(VCPKG_TARGET_TRIPLET x64-windows)
+set(VCPKG_BUILD_TYPE release)
 
 add_executable(GraphicsPlayground WIN32 ${ENGINE_SOURCES} ${ENGINE_HEADERS})
 
